--- a/css/style.css
+++ b/css/style.css
@@ -1,82 +1,113 @@
-html, body, h1, h2, h3, h4, h5, h6, p, ul, li, button{
-    margin: 0;
-    padding:0;
-    font: inherit;
-} 
-
-ul, li{
-    list-style: none;
+html,
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+li,
+button {
+  margin: 0;
+  padding: 0;
+  font: inherit;
 }
 
-*{
-    box-sizing: border-box;
+ul,
+li {
+  list-style: none;
 }
 
-:root{
-   --airbnb-pink: #ff385c;  
+* {
+  box-sizing: border-box;
 }
 
-body{
-    background-color: pink;
+:root {
+  --airbnb-pink: #ff385c;
 }
 
-header{
-    background-color: white;
-    padding: 1rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+body {
+  background-color: pink;
 }
 
-.logo{
-    width: 150px;
-    height: auto;
-    fill: var(--airbnb-pink);
+header {
+  background-color: white;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-nav ul{
-    display: flex;
-    gap: 1rem;
+.logo {
+  width: 150px;
+  height: auto;
+  fill: var(--airbnb-pink);
+}
+
+nav ul {
+  display: flex;
+  gap: 1rem;
 }
 
 nav a {
-    font-family: arial;
-    font-size: 1.25rem;
-    font-weight: bold;
-    color: black;
-    text-decoration: none;
-    transition: all .25s;
+  font-family: arial;
+  font-size: 1.25rem;
+  font-weight: bold;
+  color: black;
+  text-decoration: none;
+  transition: all 0.25s;
 }
 
-nav a:hover, nav a:focus{
-    color: var(--airbnb-pink);
-    text-decoration: underline;
+nav a:hover,
+nav a:focus {
+  color: var(--airbnb-pink);
+  text-decoration: underline;
 }
 
-.btn-ui{
-    padding: 1rem;
-    background-color: transparent; 
-    border: 1px solid var(--airbnb-pink);
-    cursor: pointer;
+.btn-ui {
+  padding: 1rem;
+  background-color: transparent;
+  border: 1px solid var(--airbnb-pink);
+  cursor: pointer;
 }
 
-.btn-ui svg{
-    width: 2rem;
-    height: auto;
-    fill: var(--airbnb-pink);
-}  
-
-.overlay{
-    width: 100vw; /* 100% of viewport width*/
-    height: 100vh; /*100% of viewport height*/
-    background-color: lightgreen;
-    position: fixed;
-    top: 0; /*0px off top edge*/
-    left: -100vw; /*-100% off left edge*/
-    z-index: 1000; /*1000 layers infront (similar to arrange, bring to front)*/
-    transition: all .5s;
+.btn-ui svg {
+  width: 2rem;
+  height: auto;
+  fill: var(--airbnb-pink);
 }
 
-.overlay.active{
-    left:0;
+.overlay {
+  width: 100vw; /* 100% of viewport width*/
+  height: 100vh; /*100% of viewport height*/
+  background-color: lightgreen;
+  position: fixed;
+  top: 0; /*0px off top edge*/
+  left: -100vw; /*-100% off left edge*/
+  z-index: 1000; /*1000 layers infront (similar to arrange, bring to front)*/
+  transition: all 0.5s;
+}
+
+.overlay.active {
+  left: 0;
+}
+
+.room {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid black;
+}
+
+.room--name {
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-family: arial;
+}
+
+.room--description {
+  font-size: 1rem;
+  font-family: arial;
+  font-style: italic;
 }
