attendence 2/27: learned how to use SASS variables, nesting, partials and mixins

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+header {
+  background-color: white;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer {
+  background-color: gray;
+  padding: 1rem;
+}
+
 html,
 body,
 h1,
@@ -32,14 +45,6 @@ body {
   background-color: #d74100;
 }
 
-header {
-  background-color: white;
-  padding: 1rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
 .logo {
   width: 150px;
   height: auto;
@@ -50,19 +55,16 @@ nav ul {
   display: flex;
   gap: 1rem;
 }
-
-nav a {
-  font-family: arial;
+nav ul li a {
+  font-family: arial, sans serif;
   font-size: 1.25rem;
   font-weight: bold;
   color: black;
   text-decoration: none;
   transition: all 0.25s;
 }
-
-nav a:hover,
-nav a:focus {
-  color: var(--airbnb-pink);
+nav ul li a:hover, nav ul li a:focus {
+  color: #d74100;
   text-decoration: underline;
 }
 
