--- a/css/style.css
+++ b/css/style.css
@@ -1,128 +1,19 @@
-header {
-  background-color: white;
-  padding: 1rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 1 | @use './abstracts/vars';
+ *   | ^^^^^^^^^^^^^^^^^^^^^^^
+ *   '
+ *   sass/layout/_header.scss 1:1  @use
+ *   sass/layout/_index.scss 1:1   @use
+ *   sass/style.scss 4:1           root stylesheet */
 
-footer {
-  background-color: gray;
-  padding: 1rem;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 1 \2502  @use './abstracts/vars';\a   \2502  ^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   sass/layout/_header.scss 1:1  @use\a   sass/layout/_index.scss 1:1   @use\a   sass/style.scss 4:1           root stylesheet";
 }
-
-html,
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ul,
-li,
-button {
-  margin: 0;
-  padding: 0;
-  font: inherit;
-}
-
-ul,
-li {
-  list-style: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-:root {
-  --airbnb-pink: #ff385c;
-}
-
-body {
-  background-color: #d74100;
-}
-
-.logo {
-  width: 150px;
-  height: auto;
-  fill: var(--airbnb-pink);
-}
-
-nav ul {
-  display: flex;
-  gap: 1rem;
-}
-nav ul li a {
-  font-family: arial, sans serif;
-  font-size: 1.25rem;
-  font-weight: bold;
-  color: black;
-  text-decoration: none;
-  transition: all 0.25s;
-}
-nav ul li a:hover, nav ul li a:focus {
-  color: #d74100;
-  text-decoration: underline;
-}
-
-.btn-ui {
-  padding: 1rem;
-  background-color: transparent;
-  border: 1px solid var(--airbnb-pink);
-  cursor: pointer;
-}
-
-.btn-ui svg {
-  width: 2rem;
-  height: auto;
-  fill: var(--airbnb-pink);
-}
-
-.overlay {
-  width: 100vw; /* 100% of viewport width*/
-  height: 100vh; /*100% of viewport height*/
-  background-color: lightgreen;
-  position: fixed;
-  top: 0; /*0px off top edge*/
-  left: -100vw; /*-100% off left edge*/
-  z-index: 1000; /*1000 layers infront (similar to arrange, bring to front)*/
-  transition: all 0.5s;
-}
-
-.overlay.active {
-  left: 0;
-}
-
-.room {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  border-bottom: 1px solid black;
-}
-
-.room--name {
-  font-size: 1.5rem;
-  font-weight: bold;
-  font-family: arial;
-}
-
-.room--description {
-  font-size: 1rem;
-  font-family: arial;
-  font-style: italic;
-}
-
-.category {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.category h2 {
-  font-weight: bold;
-  font-family: arial;
-  font-size: 2rem;
-}
-
-/*# sourceMappingURL=style.css.map */
