--- a/sass/abstracts/_vars.scss
+++ b/sass/abstracts/_vars.scss
@@ -1,5 +1,8 @@
 $color__orange: #d74100;
 $color__red: #ff0000;
 
-$font__primary: arial, sans-serif;
-$font_secondary: georgia, serif;
+//primary brand color
+$color__primary: #ff385c
+
+$font__primary: arial;
+$font__secondary: georgia, serif;
