--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,93 +1,6 @@
-@use './abstracts/vars';
+//table of contents
 
+@use './vendor';
 @use './base';
+@use './components';
 @use './layout';
-
-:root {
-  --airbnb-pink: #ff385c;
-}
-
-.logo {
-  width: 150px;
-  height: auto;
-  fill: var(--airbnb-pink);
-}
-
-nav {
-  ul {
-    display: flex;
-    gap: 1rem;
-    li {
-      a {
-        font-family: vars.$font__primary;
-        font-size: 1.25rem;
-        font-weight: bold;
-        color: black;
-        text-decoration: none;
-        transition: all 0.25s;
-        &:hover,
-        &:focus {
-          color: vars.$color__orange;
-          text-decoration: underline;
-        }
-      }
-    }
-  }
-}
-
-.btn-ui {
-  padding: 1rem;
-  background-color: transparent;
-  border: 1px solid var(--airbnb-pink);
-  cursor: pointer;
-}
-
-.btn-ui svg {
-  width: 2rem;
-  height: auto;
-  fill: var(--airbnb-pink);
-}
-
-.overlay {
-  width: 100vw; /* 100% of viewport width*/
-  height: 100vh; /*100% of viewport height*/
-  background-color: lightgreen;
-  position: fixed;
-  top: 0; /*0px off top edge*/
-  left: -100vw; /*-100% off left edge*/
-  z-index: 1000; /*1000 layers infront (similar to arrange, bring to front)*/
-  transition: all 0.5s;
-}
-
-.overlay.active {
-  left: 0;
-}
-
-.room {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  border-bottom: 1px solid black;
-}
-
-.room--name {
-  font-size: 1.5rem;
-  font-weight: bold;
-  font-family: arial;
-}
-
-.room--description {
-  font-size: 1rem;
-  font-family: arial;
-  font-style: italic;
-}
-
-.category {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.category h2 {
-  font-weight: bold;
-  font-family: arial;
-  font-size: 2rem;
-}
