--- a/sass/abstracts/_vars.scss
+++ b/sass/abstracts/_vars.scss
@@ -2,7 +2,7 @@ $color__orange: #d74100;
 $color__red: #ff0000;
 
 //primary brand color
-$color__primary: #ff385c
+$color__primary: #ff385c;
 
-$font__primary: arial;
+$font__primary: arial, sans-serif;
 $font__secondary: georgia, serif;
