--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -1,13 +1,40 @@
 @use '../abstracts/vars';
 
+.btn {
+  padding: 1rem;
+  font-family: vars.$font__primary;
+  font-size: 1rem;
+  display: inline-block;
+  background-color: gray;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 0.5rem;
+  color: white;
+  &--primary {
+    background-color: vars.$color__primary;
+  }
+  &--secondary {
+    background-color: transparent;
+    border: 1px solid black;
+    color: black;
+  }
+  &--delete {
+    background-color: red;
+  }
+  &--small {
+    font-size: 0.8rem;
+    padding: 0.25rem 0.5rem;
+  }
+}
+
 .btn-ui {
   padding: 1rem;
   background-color: transparent;
-  border: 1px solid var.$color__primary;
+  border: 1px solid vars.$color__primary;
   cursor: pointer;
   svg {
     width: 2rem;
     height: auto;
-    fill: var.$color__primary;
+    fill: vars.$color__primary;
   }
 }
