--- a/css/style.css
+++ b/css/style.css
@@ -524,6 +524,41 @@ nav ul li a:hover, nav ul li a:focus {
   font-style: italic;
 }
 
+.slider {
+  background-color: lightblue;
+}
+.slider__container {
+  overflow-x: scroll;
+  padding-left: 1rem;
+}
+@media (min-width: 700px) {
+  .slider__container {
+    padding-left: calc((100% - 700px) / 2);
+  }
+}
+@media (min-width: 1024px) {
+  .slider__container {
+    padding-left: calc((100% - 1024px) / 2);
+  }
+}
+@media (min-width: 1140px) {
+  .slider__container {
+    padding-left: calc((100% - 1140px) / 2);
+  }
+}
+.slider__grid {
+  background-color: pink;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 300px);
+  gap: 1rem;
+  grid-auto-flow: column;
+}
+.slider__item {
+  background-color: white;
+  width: 300px;
+  height: 400px;
+}
+
 header {
   background-color: white;
   padding: 1rem;
